# IMAC_ratio

./: CMakeLists.txt  README.md
UnitTest/: CMakeLists.txt
UnitTest/src/: sample_test.cpp
example/: CMakeLists.txt
example/src/: main.cpp
ratio/: CMakeLists.txt
ratio/doc/: CMakeLists.txt  Doxyfile-html.cmake
ratio/include/: Ratio.hpp
ratio/src/: Ratio.cpp
